testdata/invalid/unknown_class.sol
var x int = new UnknownClass(1);
